examples/gwapi3/bar/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: bar
spec:
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar
          image: ghcr.io/sikalabs/hello-world-server
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: bar
spec:
  selector:
    app: bar
  ports:
    - port: 80
      targetPort: 8000
