examples/gwapi3/bar/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar
  namespace: bar
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: bar
  hostnames:
    - bar.rke2.sikademo.com
  rules:
    - backendRefs:
        - name: bar
          port: 80
